src/test/ui/unboxed-closures-infer-fn-once-move-from-projection.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> $DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:24:13
   |
24 |     let c = || drop(y.0);
   |             ^^^^^^^^^^^^
25 |     foo(c);
   |     --- the requirement to implement `Fn` derives from here
   |
note: closure is `FnOnce` because it moves the variable `y` out of its environment
  --> $DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:24:21
   |
24 |     let c = || drop(y.0);
   |                     ^

error: aborting due to previous error

